# hsqb-stats-notifier

./: README.md  config_default.json  pyproject.toml  tox.ini
bot/: __main__.py
bot/exts/: admin.py  general.py  scraper.py
bot/lib/: consts.py  db.py
